# axecs

./: Cargo.toml  README.md
axecs-macro/: Cargo.toml
axecs-macro/src/: lib.rs
examples/: schedule.rs  scoped.rs  world.rs
src/: lib.rs
src/app/: mod.rs
src/app/plugin/: ctrlc.rs  cycle_scheduler.rs  mod.rs
src/archetype/: column.rs  mod.rs  storage.rs
src/component/: mod.rs
src/component/archetype/: column.rs  mod.rs  storage.rs
src/component/bundle/: mod.rs  validate.rs
src/component/query/: filter.rs  mod.rs
src/component/query/query/: impls.rs  mod.rs
src/entity/: mod.rs  query.rs
src/future/: mod.rs  until_exit.rs
src/query/: impls.rs  mod.rs  state.rs  validate.rs
src/query/impls/: event.rs  mod.rs  scoped.rs
src/resource/: event.rs  mod.rs  query.rs  storage.rs
src/schedule/: label.rs  mod.rs  storage.rs
src/schedule/system/: condition.rs  mod.rs  scheduled.rs
src/system/: function.rs  mapped.rs  mod.rs  parallel.rs  param.rs  passed.rs  piped.rs  series.rs  state.rs
src/util/: either.rs  future.rs  lazycell.rs  mod.rs  multizip.rs  rwlock.rs  sparsevec.rs  unqualified.rs  variadic.rs
src/world/: commands.rs  mod.rs
